classDiagram
    direction TB

    %% ---------------- User ----------------
    class User {
        [PK] id : int
        username : string
        email : string
        password : string
        created_at : datetime
        last_login : datetime
        is_active : boolean
        role : string
        last_admin_action : datetime

        register()
        login()
        logout()
        updateProfile()
    }

    %% ---------------- Admin ----------------
    class Admin {
        [PK] id : int
        [FK] user_id : int
        permissions : string
        last_login : datetime

        manageUsers()
        viewReports()
        deleteUsers()
        exportData()
    }

    %% ---------------- Expense ----------------
    class Expense {
        [PK] id : int
        [FK] user_id : int
        title : string
        amount : float
        date : date
        category : string
        description : string
        payment_method : string
        created_at : datetime
        updated_at : datetime

        addExpense()
        editExpense()
        deleteExpense()
        viewExpense()
    }

    %% ---------------- Category ----------------
    class Category {
        [PK] id : int
        [FK] user_id : int
        name : string
        color : string
        icon : string
        created_at : datetime

        addCategory()
        editCategory()
        deleteCategory()
        listCategories()
    }

    %% ---------------- Budget ----------------
    class Budget {
        [PK] id : int
        [FK] user_id : int
        amount : float
        start_date : date
        end_date : date
        created_at : datetime
        updated_at : datetime

        setBudget()
        updateBudget()
        getRemaining()
        alertOverspend()
    }

    %% ---------------- Report ----------------
    class Report {
        [PK] id : int
        [FK] user_id : int
        start_date : date
        end_date : date
        generated_on : date
        total_expenses : float
        remaining_budget : float

        generateReport()
        exportCSV()
        exportPDF()
    }

    %% ---------------- Relationships ----------------
    %% User relationships
    User "1" --> "0..*" Expense : "records"
    User "1" --> "0..*" Category : "creates"
    User "1" --> "0..1" Budget : "owns"
    User "1" --> "0..*" Report : "generates"
    
    %% Admin relationships
    Admin "1" --> "1" User : "is_a"
    Admin "1" --> "0..*" User : "manages"
    
    %% Category relationships
    Category "1" --> "0..*" Expense : "categorizes"
    
    %% Budget relationships
    Budget "1" --> "0..*" Expense : "monitors"
    
    %% Report relationships
    Report "1" --> "0..*" Expense : "summarizes"